Create configuration for external systems, add tests for events